<resources>
    <string name="app_name">Tangent</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_sign_in">Login</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_create_account">Create Account</string>

    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="login_error">Login Error!</string>
    <string name="action_logout">Logout</string>

    <string name="search_title">Search Stories</string>
    <string name="node_hint_title">Title</string>
    <string name="node_hint_body">Body</string>
    <string name="next_node">Choose Next</string>
    <string name="add_node">Add</string>
    <string name="random_next">Random Next</string>
    <string name="dialog_create_account_email_hint">example@gmail.com</string>
    <string name="dialog_create_account_username_hint">Username</string>
    <string name="dialog_create_account_password_hint">Password</string>
    <string name="dialog_create_account_password_confirm_hint">Confirm Password</string>
    <string name="branches_label">" Branches"</string>
    <string name="branch_text_default">Text</string>
    <string name="action_home">Home</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_unfavorite">Unfavorite</string>
    <string name="email_invalid">The email you have entered is invalid.</string>
    <string name="username_invalid">Your username must be 5-32 characters long.</string>
    <string name="password_invalid">Your password must contain at least 5 characters.</string>
    <string name="password_mismatch">The passwords you have entered do not match.</string>
    <string name="username_taken">An account with this username already exists.</string>
    <string name="email_taken">An account with this email already exists.</string>
    <string name="firebase_error_unknown">UNKNOWN FIREBASE ERROR</string>
    <string name="login_invalid_credentials">Invalid Login Credentials</string>
    <string name="credentials_check_prompt">Please make sure your email and password are correct.</string>
    <string name="action_view_favorites">View Favorites</string>
    <string name="toolbar_title_favorites">Favorite Stories</string>
    <string-array name="story_sort_array">
        <item>Newest Stories</item>
        <item>Most Read</item>
        <item>Most Popular</item>
        <item>Recently Updated</item>
    </string-array>
</resources>
