<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ReaderFragment">

    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:title="@string/action_favorite"
        android:icon="@android:drawable/star_big_off"
        android:checked="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>